--- a/sources/ZX-Preparator/CMakeLists.txt
+++ b/sources/ZX-Preparator/CMakeLists.txt
@@ -17,11 +17,13 @@ if(WIN32)
     SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -MP -Wall -std:c++17")
     set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /SUBSYSTEM:WINDOWS")
 
+    add_compile_options(/wd4365)    # 'argument': conversion from 'int' to 'uint', signed/unsigned mismatch
     add_compile_options(/wd4514)
     add_compile_options(/wd4623)
     add_compile_options(/wd4625)
     add_compile_options(/wd4626)
     add_compile_options(/wd4820)
+    add_compile_options(/wd4996)
     add_compile_options(/wd5026)
     add_compile_options(/wd5027)
     add_compile_options(/wd5039)
