--- a/sources/ZX-Preparator/CMakeLists.txt
+++ b/sources/ZX-Preparator/CMakeLists.txt
@@ -40,6 +40,7 @@ file(GLOB EMULATOR   src/Emulator/*.*)
 file(GLOB DISPLAY    src/Display/*.*)
 file(GLOB NOTEBOOK   src/Notebook/*.*)
 file(GLOB PARSER     src/Parser/*.*)
+file(GLOB UTILS      src/Utils/*.*)
 
 source_group(src        FILES ${SRC})
 source_group(Computer   FILES ${COMPUTER})
@@ -48,6 +49,7 @@ source_group(Emulator   FILES ${EMULATOR})
 source_group(Display    FILES ${DISPLAY})
 source_group(Notebook   FILES ${NOTEBOOK})
 source_group(Parser     FILES ${PARSER})
+source_group(Utils      FILES ${UTILS})
 
 add_executable(${PROJECT_NAME} ${SRC}
                                ${COMPUTER}
@@ -56,6 +58,7 @@ add_executable(${PROJECT_NAME} ${SRC}
                                ${DISPLAY}
                                ${NOTEBOOK}
                                ${PARSER}
+                               ${UTILS}
 )
 
 
