--- a/sources/ZX-Preparator/CMakeLists.txt
+++ b/sources/ZX-Preparator/CMakeLists.txt
@@ -33,23 +33,25 @@ else()
 
 endif()
 
-file(GLOB SRC        src/*.*)
-file(GLOB COMPUTER   src/Computer/*.*)
-file(GLOB CPU        src/CPU/*.*)
-file(GLOB EMULATOR   src/Emulator/*.*)
-file(GLOB DISPLAY    src/Display/*.*)
-file(GLOB NOTEBOOK   src/Notebook/*.*)
-file(GLOB PARSER     src/Parser/*.*)
-file(GLOB UTILS      src/Utils/*.*)
+file(GLOB SRC            src/*.*)
+file(GLOB COMPUTER       src/Computer/*.*)
+file(GLOB CPU            src/CPU/*.*)
+file(GLOB EMULATOR       src/Emulator/*.*)
+file(GLOB DISPLAY        src/Display/*.*)
+file(GLOB NOTEBOOK       src/Notebook/*.*)
+file(GLOB NOTEBOOK_PAGES src/Notebook/Pages/*.*)
+file(GLOB PARSER         src/Parser/*.*)
+file(GLOB UTILS          src/Utils/*.*)
 
-source_group(src        FILES ${SRC})
-source_group(Computer   FILES ${COMPUTER})
-source_group(CPU        FILES ${CPU})
-source_group(Emulator   FILES ${EMULATOR})
-source_group(Display    FILES ${DISPLAY})
-source_group(Notebook   FILES ${NOTEBOOK})
-source_group(Parser     FILES ${PARSER})
-source_group(Utils      FILES ${UTILS})
+source_group(src            FILES ${SRC})
+source_group(Computer       FILES ${COMPUTER})
+source_group(CPU            FILES ${CPU})
+source_group(Emulator       FILES ${EMULATOR})
+source_group(Display        FILES ${DISPLAY})
+source_group(Notebook       FILES ${NOTEBOOK})
+source_group(Notebook/Pages FILES ${NOTEBOOK_PAGES})
+source_group(Parser         FILES ${PARSER})
+source_group(Utils          FILES ${UTILS})
 
 add_executable(${PROJECT_NAME} ${SRC}
                                ${COMPUTER}
@@ -57,6 +59,7 @@ add_executable(${PROJECT_NAME} ${SRC}
                                ${EMULATOR}
                                ${DISPLAY}
                                ${NOTEBOOK}
+                               ${NOTEBOOK_PAGES}
                                ${PARSER}
                                ${UTILS}
 )
