--- a/sources/ZX-Preparator/CMakeLists.txt
+++ b/sources/ZX-Preparator/CMakeLists.txt
@@ -2,7 +2,7 @@
 
 project (ZX-Preparator)
 
-#set(CMAKE_UNITY_BUILD OFF)
+set(CMAKE_UNITY_BUILD OFF)
 
 include_directories(src/
                     ../ThirdParty/wxWidgets/include/
